########################################
# 2003-11-10 galculator 1.1.4 released #
########################################

2003-11-09 Simon Floery <chimaira@users.sf.net>
	* RPN stack is remembered. several fixes
	* fixed DBTS #219390 (fixed de.po)
	* updated french and german translations
	* fixed sf.net #820399 (added p,P shortcuts)

2003-10-07 Simon Floery <chimaira@users.sf.net>
	* introduced display_result_changed. fixes sf.net bug #750519

2003-09-23 Simon Floery <chimaira@users.sf.net>
	* agreed to and fixed sf.net bug #799417 (memory save, memory read and
	constant retrieve start new calc entry)

2003-09-20 Simon Floery <chimaira@users.sf.net>
	* sf.net bug #798511 fixed

2003-09-19 Simon Floery <chimaira@users.sf.net>
	* RPN updates: rolldown stack, swap xy on stack 
	(satifies sf.net fr #799397 and DBTS #202633)

2003-09-18 Simon Floery <chimaira@users.sf.net>
	* src/display.c: display RPN stack
	
2003-09-11 Simon Floery <chimaira@users.sf.net>
	* ui/prefs.galde: added (in)finite RPN stack option, naturally updates
	to config code, etc.
	* applied patches (c cleanups, IBM compiler) by albert. Thanks!

2003-09-09 Simon Floery <chimaira@users.sf.net>
	* src/calc_basic.c: finite/infinite stack, swap x y, rolldown stack

########################################
# 2003-08-31 galculator 1.1.3 released #
########################################

2003-08-31 Simon Floery <chimaira@users.sf.net>
	* ja.po translation update

2003-08-26 Simon Floery <chimaira@users.sf.net>
	* fr.po translation update

2003-08-25 Simon Floery <chimaira@users.sf.net>
	* display control buttons in scientific resp basic mode.
	* de.po translation update

2003-08-20 Simon Floery <chimaira@users.sf.net>
	* number, angle and notation are remembered on exit. no defaults anymore

2003-08-18 Simon Floery <chimaira@users.sf.net>
	* src/callbacks.c: fixed token.func bug (closes DBTS #205126)
	* GUI updates (y^x in RPN, change font for "popup buttons")