@@ -137,7 +137,7 @@ configure: failed program was:
 | #define PACKAGE_STRING ""
 | #define PACKAGE_BUGREPORT ""
 | #define PACKAGE "galculator"
-| #define VERSION "1.1.4"
+| #define VERSION "1.1.5CVS"
 | /* end confdefs.h.  */
 | 
 | /* Override any gcc2 internal prototype to avoid an error.  */
@@ -171,7 +171,7 @@ configure: failed program was:
 | #define PACKAGE_STRING ""
 | #define PACKAGE_BUGREPORT ""
 | #define PACKAGE "galculator"
-| #define VERSION "1.1.4"
+| #define VERSION "1.1.5CVS"
 | /* end confdefs.h.  */
 | #include <ac_nonexistent.h>
 configure:2765: result: gcc -E
@@ -190,7 +190,7 @@ configure: failed program was:
 | #define PACKAGE_STRING ""
 | #define PACKAGE_BUGREPORT ""
 | #define PACKAGE "galculator"
-| #define VERSION "1.1.4"
+| #define VERSION "1.1.5CVS"
 | /* end confdefs.h.  */
 | #include <ac_nonexistent.h>
 configure:2877: checking for egrep
@@ -487,7 +487,7 @@ PO_IN_DATADIR_TRUE=''
 SET_MAKE=''
 SHELL='/bin/sh'
 USE_NLS='yes'
-VERSION='1.1.4'
+VERSION='1.1.5CVS'
 XGETTEXT='/usr/bin/xgettext'
 ac_ct_CC='gcc'
 bindir='${exec_prefix}/bin'
@@ -536,6 +536,6 @@ target_alias=''
 #define PACKAGE_TARNAME ""
 #define PACKAGE_VERSION ""
 #define STDC_HEADERS 1
-#define VERSION "1.1.4"
+#define VERSION "1.1.5CVS"
 
 configure: exit 0
