@@ -6,14 +6,14 @@ RunInTerminal=true
 ShowLocals=true
 
 [filenumbers]
-0=1
-1=136
-2=537
-3=60
-4=33
-5=8
-6=782
-7=1
+0=233
+1=59
+2=1
+3=136
+4=1276
+5=60
+6=7
+7=59
 8=27
 9=6
 10=21
@@ -39,12 +39,14 @@ filter.file.ignore.hidden=0
 filter.dir.ignore.hidden=0
 
 [filelist]
-0=/home/sf/Devel/galculator/src/general_functions.c
-1=/home/sf/Devel/galculator/src/main.c
-2=/home/sf/Devel/galculator/src/callbacks.c
-3=/home/sf/Devel/galculator/doc/shortcuts
-4=/home/sf/Devel/galculator/ChangeLog
-5=/home/sf/Devel/galculator/TODO
+0=/home/sf/Devel/galculator/src/callbacks.h
+1=/home/sf/Devel/galculator/src/display.c
+2=/home/sf/Devel/galculator/src/general_functions.c
+3=/home/sf/Devel/galculator/src/main.c
+4=/home/sf/Devel/galculator/src/callbacks.c
+5=/home/sf/Devel/galculator/doc/shortcuts
+6=/home/sf/Devel/galculator/ChangeLog
+7=/home/sf/Devel/galculator/TODO
 
 [Project Tree]
 0=0
